<resources>
    <string name="app_name">Сalculator_app</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_dot">.</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_del">/</string>
    <string name="button_mux">*</string>
    <string name="button_equally">=</string>
    <string name="button_discharge">C</string>
    <string name="button_point">.</string>
    <string name="day_night">Хочу сменить тему!</string>
    <string name="change_topic">Выбери тему</string>
    <string name="day">Дневная тема</string>
    <string name="night">ночная тема</string>
    <string name="change_text">Выберите тему</string>
</resources>