<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pic"
    android:padding="@dimen/padMain"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/text"
        style="@style/text_win_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/point" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/seven"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:text="@string/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eight"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toEndOf="@id/seven"
        android:text="@string/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nine"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toEndOf="@id/eight"
        android:text="@string/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/four"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seven"
        android:text="@string/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/five"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eight"
        android:layout_toEndOf="@id/four"
        android:text="@string/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/six"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nine"
        android:layout_toEndOf="@id/five"
        android:text="@string/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/one"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/four"
        android:text="@string/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/two"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/five"
        android:layout_toEndOf="@id/one"
        android:text="@string/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/three"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/six"
        android:layout_toEndOf="@id/two"
        android:text="@string/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset"
        style="@style/light.signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/one"
        android:text="@string/button_discharge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/zero"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/two"
        android:layout_alignEnd="@id/eight"
        android:text="@string/button0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equals"
        style="@style/light.signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/three"
        android:layout_alignEnd="@id/nine"
        android:text="@string/button_equally" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/division"
        style="@style/light.signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/plus"
        android:layout_toEndOf="@id/six"
        android:text="@string/button_del" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiply"
        style="@style/light.signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/division"
        android:layout_toEndOf="@id/three"
        android:text="@string/button_mux" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minus"
        style="@style/light.signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/multiply"
        android:layout_toEndOf="@id/equals"
        android:text="@string/button_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus"
        style="@style/light.signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/point"
        android:layout_toEndOf="@id/nine"
        android:text="@string/button_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/point"
        style="@style/light.signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/nine"
        android:text="@string/button_point" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/day"
        style="@style/light.signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minus"
        android:layout_toEndOf="@id/equals"
        android:text="@string/day_night" />

</RelativeLayout>
