<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padMain"
    tools:context=".CalculatorChange">

    <TextView
        android:id="@+id/text_change"
        style="@style/text_win_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_text"
        android:gravity="center" />

    <RadioButton
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_change"
        android:gravity="center"
        android:text="@string/day" />

    <RadioButton
        android:id="@+id/night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day"
        android:gravity="center"
        android:text="@string/night" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/night"
        android:text="Назад"/>


</RelativeLayout>